--- a/src/assets/scss/layout/_about-wedding.scss
+++ b/src/assets/scss/layout/_about-wedding.scss
@@ -1,4 +1,4 @@
-#about-us {
+#about-wedding {
   background: #232526; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
@@ -11,21 +11,17 @@
     #232526
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-  h1 {
-    margin: 0;
+  .header {
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
   }
 
-  .about-us-container {
-    .mary {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-    }
-
-    .royce {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-    }
+  .about-wedding-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
   }
 }
