--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -110,3 +110,14 @@
     }
   }
 }
+.person {
+  border: 1px solid white;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px 0;
+}
+
+input {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
