--- a/src/assets/scss/layout/_bg.scss
+++ b/src/assets/scss/layout/_bg.scss
@@ -70,7 +70,7 @@
 @media screen and (max-width: 600px) {
   #bg {
     &:after {
-      // background-position-x: -595px;
+      // background-position-x: -595px;;
     }
   }
 }
